# bachelor-thesis

./: .gitattributes  .gitignore  README.md  structure.md
.github/workflows/: action.yml  github-actions-latex.yml  slides.yml  thesis.yml
TeX/: Bibliography.bib  classicthesis-config.tex  main.tex
TeX/Chapters/: Chapter01.tex  Chapter02.tex  Chapter03.tex  Chapter04.tex  Chapter0A.tex  appendix.tex  conclusion.tex
TeX/FrontBackMatter/: Abstract.tex  Bibliography.tex  Contents.tex  Titlepage.tex
experiments/: DAG.ipynb  DG-to-DAG.ipynb  compress_sets_on_DAG.md
experiments/gfa-rs/: Cargo.toml
experiments/junk-notebooks/: check_DFA.ipynb  dag.tsv  gfa-parser.ipynb  implicit_node.ipynb  interval-tree.ipynb  rank-on-DAGs_v2.ipynb  rank-on-graphs.ipynb  rank-select-on-DAGs.ipynb  test_if_rust_works.ipynb
experiments/py-prototype/: README.md
gfa-rs/: Cargo.toml  DRB1-3123_unsorted.tsv  README.md  big.tsv  chrX.pan.fa.a2fb268.4030258.6a1ecc2.smooth.tsv  chrY.pan.fa.a2fb268.4030258.6a1ecc2.smooth.tsv  test.tsv
gfa-rs/examples/configurable/: Cargo.toml
gfa-rs/examples/configurable/src/: settings.rs
gfa-rs/examples/fdg-example/: Cargo.toml
gfa-rs/src/: gfa.rs  graph.rs  lib.rs  main.rs  parser.rs  paths.rs  utils.rs
slides/: README.md  beamerthemedmpisa.sty  discorso.md  dmpisacolor.sty  thesis_slides.tex
slides/sections/: conclusion.tex  dag.tex  introduction.tex
tex/: Bibliography.bib  classicthesis-config.tex
tex/Chapters/: Chapter01.tex  Chapter03.tex
thesis/: Bibliography.bib  classicthesis-config.tex  main.tex
thesis/Chapters/: appendix.tex
(+64 files in other folders)
