[package]
name = "configurable"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = "0.27"
petgraph = "0.6"
egui_graphs = { version = "0.20.0", features = ["events"] }
serde_json = "1.0"
fdg-sim = "0.9"
rand = "0.8"
crossbeam = "0.8"
gfa_rs = { path = "../../" }
